--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@
 #| label: setup
 #| include: false
 
-base::source(file = "R/helper.R")
+base::source(file = paste0(here::here(), "/R/helper.R"))
 ```
 
 ::: my-watch-out
